# cpu-performance-study

./: .clang-tidy  .gitignore  CMakeLists.txt  notes.Rmd
benchmark/: CMakeLists.txt
benchmark/gallery-of-processor-cache-effects/: .instruction-level-parallelism.cpp.swp  .run.sh.swp  CMakeLists.txt  impact-of-cache-lines.cpp  instruction-level-parallelism-part-2.cpp  instruction-level-parallelism.cpp  l1-and-l2-cache-sizes.cpp  race-condition.cpp  run.sh
benchmark/gallery-of-processor-cache-effects/analysis/: analysis.rmd  impact-of-cache-lines.csv  instruction-level-parallelism.csv  l1-and-l2-cache-sizes.csv
benchmark/memory-access/: CMakeLists.txt  run.sh
benchmark/memory-access/analysis/: analysis.rmd  data.csv
benchmarks/: CMakeLists.txt  benchmark-setup-teardown.sh
benchmarks/col-vs-row-major/: CMakeLists.txt  col-vs-row-major.cpp  generate-report.R  plot.R  prepare-data.sh
benchmarks/false-sharing/: CMakeLists.txt  benchmark.sh  generate-report.R  plot.R  prepare-data.sh
benchmarks/looped-mem-access/: CMakeLists.txt  run-benchmark.sh
cmake/: helpers.cmake
csv/col-vs-row-major/: outs.csv  result-2019-07-20-19:07:32:932834380.csv
scripts/: README  cpu-frequency-scaling.sh  metainfo.sh
slides/: CMakeLists.txt  slides.Rmd  slides.html
src/: CMakeLists.txt  impact-of-cache-lines.cpp  instruction-level-parallelism.cpp  l1-and-l2-cache-sizes.cpp
src/col-vs-row-major/: CMakeLists.txt  col-vs-row-major.cpp  generate-report.R  prepare-data.sh  run-benchmark.sh
src/false-sharing/: CMakeLists.txt  false-sharing.cpp  generate-report.R
src/looped-mem-access/: CMakeLists.txt  analyze.sh  generate-data.sh  generate-report.R  generate-report.sh  looped-mem-access.cpp  plot-raw-data.R  run-benchmark.sh
