add_subdirectory(col-vs-row-major)
# TODO: Adjust other benchmarks and include them here

# TODO: Add benchmark comparing searches in a dictionary where
#       (1) the key-value pairs are laid out im memory side-by-side
#       (2) the keys are stored separately from the values
#       See Mike Acton's https://www.youtube.com/watch?v=rX0ItVEVjHc&t=25m53s
